--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
     "node": "18.x"
   },
   "scripts": {
-    "start": "node /src/server.js",
+    "start": "npm run migrate && node /src/server.js",
     "dev": "nodemon ./src/server.js",
-    "migrate": "knex migrate:latest",
-    "vercel-build": "npm run migrate"
+    "migrate": "knex migrate:latest"
   },
   "author": "Helena Lima",
   "license": "ISC",
