--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "18.x"
   },
   "scripts": {
-    "start": "npm run migrate && node /src/server.js",
+    "start": "npm run migrate && node ./src/server.js",
     "dev": "nodemon ./src/server.js",
     "migrate": "knex migrate:latest"
   },
